cards styling is done